evil portal index page update

--- a/index.html
+++ b/index.html
@@ -296,6 +296,8 @@
 
         <footer>
             <p style="margin-top: 10px; font-size: 0.9em;">For educational and testing purposes only</p>
+            <!-- Portal authors are listed here -->
+            <p style="margin-top: 15px; font-size: 0.85em;"><a href="portals/README.md" style="color: white; text-decoration: underline;">📜 Portal Contributors</a></p>
         </footer>
     </div>
 
