--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <p>Collection of captive portals for testing and education</p>
             <div class="stats">
                 <div class="stat-item">
-                    <div class="stat-number">28</div>
+                    <div class="stat-number">29</div>
                     <div class="stat-label">Portals</div>
                 </div>
                 <div class="stat-item">
@@ -232,6 +232,7 @@
             </div>
             <div class="portal-grid">
                 <a href="portals/isp/at&t.html" class="portal-card isp" data-name="AT&T">AT&T</a>
+                <a href="portals/isp/cd_wifi.html" class="portal-card isp" data-name="České dráhy WiFi">České dráhy WiFi</a>
                 <a href="portals/isp/CoxWifi.html" class="portal-card isp" data-name="Cox WiFi">Cox WiFi</a>
                 <a href="portals/isp/Eduroam.html" class="portal-card isp" data-name="Eduroam">Eduroam</a>
                 <a href="portals/isp/Spectrum.html" class="portal-card isp" data-name="Spectrum">Spectrum</a>
