new evil portal pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TweenWave - Portal Gallery</title>
+    <title>TweenWave - Evil Portal Gallery</title>
     <style>
         * {
             margin: 0;
@@ -178,11 +178,11 @@
 <body>
     <div class="container">
         <header>
-            <h1>🌊 TweenWave Portal Gallery</h1>
+            <h1>🌊 TweenWave Evil Portal Gallery</h1>
             <p>Collection of captive portals for testing and education</p>
             <div class="stats">
                 <div class="stat-item">
-                    <div class="stat-number">29</div>
+                    <div class="stat-number">31</div>
                     <div class="stat-label">Portals</div>
                 </div>
                 <div class="stat-item">
@@ -252,6 +252,7 @@
                 <a href="portals/jokes/FakeHack.html" class="portal-card jokes" data-name="Fake Hack">Fake Hack</a>
                 <a href="portals/jokes/FakeHack2.html" class="portal-card jokes" data-name="Fake Hack 2">Fake Hack 2</a>
                 <a href="portals/jokes/Frequency.html" class="portal-card jokes" data-name="Frequency">Frequency</a>
+                <a href="portals/jokes/GuestBook.html" class="portal-card jokes" data-name="Guest Book">Guest Book</a>
                 <a href="portals/jokes/Matrix.html" class="portal-card jokes" data-name="Matrix">Matrix</a>
                 <a href="portals/jokes/Prank_Game.html" class="portal-card jokes" data-name="Prank Game">Prank Game</a>
             </div>
