--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <p>Collection of captive portals for testing and education</p>
             <div class="stats">
                 <div class="stat-item">
-                    <div class="stat-number">31</div>
+                    <div class="stat-number">32</div>
                     <div class="stat-label">Portals</div>
                 </div>
                 <div class="stat-item">
@@ -255,6 +255,7 @@
                 <a href="portals/jokes/GuestBook.html" class="portal-card jokes" data-name="Guest Book">Guest Book</a>
                 <a href="portals/jokes/Matrix.html" class="portal-card jokes" data-name="Matrix">Matrix</a>
                 <a href="portals/jokes/Prank_Game.html" class="portal-card jokes" data-name="Prank Game">Prank Game</a>
+                <a href="portals/jokes/NeonBreaker.html" class="portal-card jokes" data-name="Neon Breaker">Neon Breaker</a>
             </div>
         </div>
 
