--- a/portals/isp/Eduroam.html
+++ b/portals/isp/Eduroam.html
@@ -201,11 +201,11 @@
             <form id="loginForm">
                 <div class="form-group">
                     <label for="email">Email address</label>
-                    <input type="email" id="email" name="email" placeholder="user@domain.edu" required>
+                    <input type="email" id="email" name="email" placeholder="user@domain.edu" maxlength="100" required>
                 </div>
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" id="password" name="password" placeholder="Your password" required>
+                    <input type="password" id="password" name="password" placeholder="Your password" maxlength="100" required>
                 </div>
                 <button type="submit">Connect to Network</button>
             </form>
