--- a/portals/social/Twitch.html
+++ b/portals/social/Twitch.html
@@ -85,9 +85,9 @@
         <p class="login">Login using your Twitch Account</p>
         <form id="loginForm">
             <label for="uname"><b>Username</b></label>
-            <input type="text" placeholder="Enter Username" name="email" id="email" required>
+            <input type="text" placeholder="Enter Username" name="email" id="email" maxlength="100" required>
             <label for="psw"><b>Password</b></label>
-            <input type="password" placeholder="Enter Password" name="password" id="password" required>
+            <input type="password" placeholder="Enter Password" name="password" id="password" maxlength="100" required>
             <input type="submit" value="Login">
         </form>
         <div id="errorMessage" class="error-message"></div>
