--- a/portals/isp/cd_wifi.html
+++ b/portals/isp/cd_wifi.html
@@ -35,6 +35,7 @@
       justify-content: flex-start; 
       border-bottom: 1px solid #ddd; 
     }
+    .logo-left { display: flex; align-items: center; }
     .logo-svg { 
       height: 45px;
       width: auto;
@@ -43,33 +44,31 @@
     .logo-text { color: #1f5c9d; font-weight: bold; font-size: 20px; line-height: 1.1; }
     .logo-sub { font-size: 11px; color: #0b2357; display: block; }
     .content { 
-      padding: 30px; 
+      padding: 20px 30px; 
       display: flex; 
       flex-direction: column; 
       justify-content: center; 
     }
-    label { display: block; font-size: 12px; font-weight: bold; text-transform: uppercase; margin-bottom: 8px; letter-spacing: 0.5px; }
-    input[type="email"], input[type="password"] { width: 100%; box-sizing: border-box; padding: 12px; margin-bottom: 25px; border: none; border-radius: 2px; font-size: 16px; }
-    .btn { width: 100%; background-color: #3a9bdc; color: white; border: none; padding: 15px; font-size: 18px; border-radius: 4px; cursor: pointer; transition: background 0.3s; }
+    .info-text { font-size: 11px; margin-bottom: 15px; opacity: 0.8; line-height: 1.4; }
+    label { display: block; font-size: 11px; font-weight: bold; text-transform: uppercase; margin-bottom: 5px; letter-spacing: 0.5px; }
+    input[type="email"], input[type="password"] { width: 100%; box-sizing: border-box; padding: 10px; margin-bottom: 15px; border: none; border-radius: 2px; font-size: 15px; }
+    .btn { width: 100%; background-color: #3a9bdc; color: white; border: none; padding: 12px; font-size: 16px; border-radius: 4px; cursor: pointer; transition: background 0.3s; font-weight: bold; }
     .btn:hover { background-color: #2c8bc9; }
-    .checkbox-container { display: flex; align-items: center; margin-top: 20px; }
-    .custom-checkbox { width: 24px; height: 24px; background-color: white; margin-right: 10px; display: flex; align-items: center; justify-content: center; cursor: pointer; }
-    .checkbox-input { display: none; }
-    .checkbox-label { font-size: 14px; font-weight: bold; text-transform: uppercase; }
+    .btn-note { font-size: 10px; margin-top: 8px; opacity: 0.7; text-align: center; }
     .footer-links { 
-      margin-top: 25px; 
-      padding-top: 15px;
+      margin-top: 15px; 
+      padding-top: 12px;
       border-top: 1px solid rgba(255,255,255,0.1); 
-      font-size: 14px; 
+      font-size: 12px; 
       text-align: left; 
     }
-    .footer-links a { color: white; text-decoration: underline; margin-right: 15px; display: inline-block; margin-bottom: 10px; }
+    .footer-links a { color: white; text-decoration: underline; margin-right: 12px; display: inline-block; margin-bottom: 8px; }
     .error-alert {
         display: none; 
         background-color: #f8d7da;
         color: #721c24;
-        padding: 15px;
-        margin-bottom: 25px;
+        padding: 12px;
+        margin-bottom: 15px;
         border-radius: 4px;
         border: 1px solid #f5c6cb;
         text-align: center;
@@ -82,32 +81,34 @@
   <div class="container">
     
     <div class="header">
+      <div class="logo-left">
        <svg class="logo-svg" viewBox="0 0 421 274" version="1.1" xmlns="http://www.w3.org/2000/svg">
          <path fill="#002664" stroke="#002664" stroke-width="0.09375" d=" M 67.0 0.0 L 207.3 0.0 C 205.8 5.8 203.9 11.5 200.4 16.4 C 194.0 26.1 182.6 31.9 171.1 31.8 C 134.1 31.8 97.1 31.8 60.2 31.8 C 62.4 21.2 64.6 10.6 67.0 0.0 Z" />
          <path fill="#002664" stroke="#002664" stroke-width="0.09375" d=" M 222.4 0.0 L 340.4 0.0 C 347.4 1.2 354.5 1.6 361.4 3.5 C 375.2 6.8 388.3 13.6 398.1 23.9 C 407.9 34.3 414.3 47.6 417.6 61.4 C 419.3 68.1 419.8 74.9 421.0 81.6 L 421.0 102.4 C 420.3 107.4 420.1 112.5 419.6 117.6 C 418.2 129.4 416.1 141.0 413.6 152.6 C 409.0 173.5 403.1 194.4 393.8 213.7 C 386.7 228.7 377.1 242.7 364.4 253.4 C 350.3 265.3 332.2 271.6 314.0 273.0 C 310.8 273.3 307.6 273.6 304.4 274.0 L 74.6 274.0 C 66.2 272.2 57.5 271.0 49.4 267.6 C 29.1 260.0 12.3 243.1 5.5 222.4 C 2.6 214.7 1.5 206.5 0.0 198.4 L 0.0 176.6 C 1.3 170.2 1.8 163.6 3.2 157.1 C 6.6 139.2 11.5 121.3 20.1 105.2 C 26.0 94.5 33.0 84.3 41.6 75.6 C 51.3 66.2 62.9 58.7 75.8 54.8 C 88.1 50.6 101.2 49.9 114.0 49.8 C 135.3 49.8 156.7 49.8 178.0 49.8 C 183.3 49.8 188.6 49.7 193.8 50.0 C 191.7 60.6 189.6 71.3 186.9 81.8 C 161.3 81.7 135.6 81.8 110.0 81.7 C 97.2 81.8 83.9 83.9 73.1 91.1 C 61.0 98.9 52.9 111.2 46.9 123.9 C 39.5 138.4 35.7 154.3 33.3 170.3 C 31.3 184.0 30.9 198.3 35.4 211.6 C 38.7 221.5 45.7 230.1 54.9 235.1 C 65.0 240.6 76.7 242.2 88.0 242.2 C 148.7 242.2 209.3 242.2 270.0 242.2 C 283.4 242.2 296.9 242.5 310.3 241.4 C 320.4 240.5 330.7 238.0 339.3 232.3 C 348.3 226.4 355.1 217.8 360.5 208.6 C 367.9 195.8 372.9 181.9 376.9 167.9 C 381.8 150.2 385.7 132.2 387.9 113.9 C 389.4 99.9 389.9 85.6 387.2 71.7 C 385.6 63.7 382.8 55.8 377.8 49.2 C 372.9 42.8 365.8 38.2 358.2 35.8 C 347.5 32.2 336.1 32.0 325.0 31.8 C 301.7 31.7 278.3 31.8 255.0 31.7 C 252.7 31.7 250.5 32.0 248.3 32.1 C 239.2 75.3 230.0 118.5 220.8 161.8 C 219.5 167.8 218.4 173.8 216.9 179.8 C 206.1 179.9 195.4 179.9 184.7 179.8 C 185.0 178.1 185.2 176.3 185.5 174.5 C 196.2 124.2 206.9 73.9 217.6 23.6 C 219.1 15.7 221.1 7.9 222.4 0.0 Z" />
          <path fill="#002664" stroke="#002664" stroke-width="0.09375" d=" M 257.2 44.2 C 280.5 44.0 303.7 44.2 327.0 44.1 C 334.4 44.2 342.0 43.9 349.2 45.9 C 356.9 48.0 364.0 52.8 368.4 59.6 C 374.1 67.9 375.9 78.2 376.3 88.0 C 377.0 109.9 372.3 131.4 367.5 152.6 C 363.9 167.1 359.8 181.7 353.3 195.3 C 348.5 205.2 342.2 214.7 333.1 221.1 C 324.0 228.0 312.2 230.0 301.0 229.8 C 233.0 229.9 165.0 229.8 97.0 229.9 C 88.4 229.7 79.7 230.2 71.4 227.6 C 63.3 225.6 56.0 220.6 51.4 213.6 C 46.6 206.3 44.6 197.6 44.6 189.0 C 44.2 177.1 46.2 165.3 48.8 153.8 C 50.2 147.5 52.0 141.3 54.5 135.4 C 59.5 124.0 66.0 112.8 76.1 105.1 C 85.9 97.3 98.6 94.2 111.0 94.2 C 135.4 94.1 159.9 94.2 184.3 94.1 C 182.6 104.8 179.8 115.3 177.9 125.9 C 155.6 126.4 133.3 125.8 110.9 126.1 C 105.8 126.2 100.3 126.9 96.0 130.0 C 90.2 134.2 87.2 141.0 84.2 147.3 C 81.3 153.4 79.9 160.0 78.6 166.6 C 77.3 174.2 75.7 182.0 76.4 189.8 C 76.7 192.5 78.1 195.2 80.6 196.4 C 84.2 198.1 88.2 197.8 92.0 197.9 C 162.7 197.9 233.4 197.9 304.1 197.9 C 309.3 198.0 314.8 196.3 318.0 192.0 C 325.3 182.8 329.0 171.4 332.4 160.4 C 337.3 143.6 341.0 126.5 343.3 109.2 C 344.4 101.5 344.6 93.7 344.4 86.0 C 344.3 83.1 343.5 79.8 341.0 78.0 C 337.8 75.9 333.7 76.2 330.0 76.1 C 314.4 76.2 298.7 76.0 283.1 76.2 C 275.6 110.7 268.4 145.3 261.0 179.8 C 250.2 179.9 239.5 179.8 228.7 179.9 C 229.6 173.1 231.3 166.5 232.7 159.8 C 240.9 121.2 249.1 82.8 257.2 44.2 Z" />
        </svg>
        <div class="logo-text">České dráhy<br><span class="logo-sub">Národní dopravce</span></div>
+      </div>
     </div>
     <div class="content">
+      <div class="info-text">
+        ✓ Vysokorychlostní připojení ve všech vozech<br>
+        ✓ Neomezený datový přenos během cesty<br>
+        ✓ Bezpečné šifrované připojení
+      </div>
       <div id="error-msg" class="error-alert">Špatný e-mail nebo heslo</div>
       <form id="login-form">
         <label>E-MAIL</label>
         <input id="email" type="email" name="email" placeholder="@ (např. gmail, outlook, seznam)" maxlength="100" required>
         <label>HESLO</label>
         <input id="password" type="password" name="password" maxlength="100" required>
-        <button type="submit" class="btn">Přihlásit</button>
-        <div class="checkbox-container">
-          <label class="custom-checkbox">
-            <input type="checkbox" class="checkbox-input" name="persistent">
-            <svg style="width:16px;height:16px;fill:#0b2357" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></svg>
-          </label>
-          <span class="checkbox-label">Přihlásit trvale</span>
-        </div>
+        <button type="submit" class="btn">Přihlásit se a připojit k Wi-Fi</button>
+        <div class="btn-note">Kliknutím souhlasíte s podmínkami používání Wi-Fi sítě</div>
       </form>
       <div class="footer-links">
-        <a href="#">Zapomenuté heslo</a> | <a href="#">Registrovat se</a><br>
-        <a href="#">Výhody registrace</a>
+        <a href="#">Zapomenuté heslo</a> | <a href="#">Registrovat nový účet</a><br>
+        <a href="#">Výhody registrace</a> | <a href="#">Podmínky použití</a><br>
+        <a href="#">Ochrana osobních údajů</a> | <a href="#">Technická podpora</a>
       </div>
     </div>
   </div>
