repo struct update

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
     <header>
         <div class="logo-container">
-            <img src="doc/logo.png" alt="TweenWave Logo" class="logo">
+            <img src="media/logo_simple_fill.png" alt="TweenWave Logo" class="logo">
         </div>
         <h1 class="glitch-title" data-text="TweenWave">TweenWave</h1>
         <p class="subtitle">Wireless Research &amp; Sub-GHz GPIO Module for Flipper Zero</p>
@@ -173,7 +173,7 @@
 
     <main>
         <section class="hero-section">
-            <img src="doc/final_4.jpg" alt="TweenWave Cyberpunk" class="hero-image glitch-img">
+            <img src="media/product/final_4.jpg" alt="TweenWave Cyberpunk" class="hero-image glitch-img">
             <div class="hero-overlay">
                 <p class="terminal-text">SYSTEM.INIT: TweenWave module loaded. Dual-band radio active. Ready for research.</p>
             </div>
@@ -213,27 +213,27 @@
             <h2 class="section-title">// Visual Data</h2>
             <div class="gallery">
                 <div class="gallery-item">
-                    <img src="doc/final_2.jpg" alt="TweenWave connected to Flipper Zero">
+                    <img src="media/product/final_2.jpg" alt="TweenWave connected to Flipper Zero">
                     <div class="gallery-caption">Module Connected</div>
                 </div>
                 <div class="gallery-item">
-                    <img src="doc/final_3.jpg" alt="TweenWave top view">
+                    <img src="media/product/final_3.jpg" alt="TweenWave top view">
                     <div class="gallery-caption">Top View</div>
                 </div>
                 <div class="gallery-item">
-                    <img src="doc/final_1.jpg" alt="TweenWave prototype">
+                    <img src="media/product/final_1.jpg" alt="TweenWave prototype">
                     <div class="gallery-caption">First Prototype</div>
                 </div>
                 <div class="gallery-item">
-                    <img src="doc/render_1.jpg" alt="TweenWave 3D render">
+                    <img src="media/product/render_1.jpg" alt="TweenWave 3D render">
                     <div class="gallery-caption">3D Render</div>
                 </div>
                 <div class="gallery-item">
-                    <img src="doc/pcb.png" alt="PCB Layout">
+                    <img src="media/schematic/pcb.png" alt="PCB Layout">
                     <div class="gallery-caption">PCB Layout</div>
                 </div>
                 <div class="gallery-item">
-                    <img src="doc/sch.png" alt="Schematic">
+                    <img src="media/schematic/sch.png" alt="Schematic">
                     <div class="gallery-caption">Circuit Schematic</div>
                 </div>
             </div>
