--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                     <tr><td>Power Supply</td><td>3.3V via Flipper GPIO</td></tr>
                     <tr><td>ESP32 Interface</td><td>UART/Serial via GPIO</td></tr>
                     <tr><td>CC1101 Interface</td><td>SPI Bus (shared with Flipper)</td></tr>
-                    <tr><td>Firmware Support</td><td>Advanced Multi-Tool Support</td></tr>
+                    <tr><td>Firmware Support</td><td>Marauder v1.8.6 (ESP32 PICO port)</td></tr>
                     <tr><td>PCB Revision</td><td>v2.1</td></tr>
                 </table>
             </div>
