--- a/index.html
+++ b/index.html
@@ -557,24 +557,12 @@
                     <div class="gallery-caption">Hardware Alpha</div>
                 </div>
                 <div class="gallery-item" onclick="openLightbox(this)">
+                    <img src="media/product/final_5.jpg" alt="TweenWave with extended WiFi antenna">
+                    <div class="gallery-caption">Extended Antenna</div>
+                </div>
+                <div class="gallery-item" onclick="openLightbox(this)">
                     <img src="media/product/render_1.jpg" alt="TweenWave 3D render">
                     <div class="gallery-caption">3D Render</div>
-                </div>
-            </div>
-
-            <h3 class="gallery-subtitle">🔧 Schematics & PCB</h3>
-            <div class="gallery">
-                <div class="gallery-item" onclick="openLightbox(this)">
-                    <img src="media/schematic/sch.png" alt="Circuit Schematic">
-                    <div class="gallery-caption">Circuit Schematic</div>
-                </div>
-                <div class="gallery-item" onclick="openLightbox(this)">
-                    <img src="media/schematic/pcb.png" alt="PCB Layout">
-                    <div class="gallery-caption">PCB Layout</div>
-                </div>
-                <div class="gallery-item" onclick="openLightbox(this)">
-                    <img src="media/schematic/pcb2.png" alt="PCB 3D View">
-                    <div class="gallery-caption">PCB 3D View</div>
                 </div>
             </div>
         </section>
